--- a/docs/governance/voting-process.mdx
+++ b/docs/governance/voting-process.mdx
@@ -43,9 +43,9 @@ Currently, 1inch DAO voting uses governance token balances and delegations on th
 #### 1INCH
 
 * Ethereum mainnet: [0x111111111117dc0aa78b770fa6a738034120c302](https://etherscan.io/token/0x111111111117dc0aa78b770fa6a738034120c302)
-* Binance Smart Chain: [0x111111111117dc0aa78b770fa6a738034120c302](https://bscscan.com/token/0x111111111117dc0aa78b770fa6a738034120c302)
+* Binance Smart Chain: [0x759A28232C6440E5aeE0db01972Ff11f4868F25B
 
 #### v1INCH
 
-* Ethereum mainnet: [0x03d1b1a56708fa298198dd5e23651a29b76a16d2](https://etherscan.io/token/0x03d1b1a56708fa298198dd5e23651a29b76a16d2)
+* Ethereum mainnet: [0x759A28232C6440E5aeE0db01972Ff11f4868F25B
 
